[project]
name = "oasis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cudaq>=0.13.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "qiskit-ibm-runtime>=0.45.1",
    "qiskit-qasm3-import>=0.6.0",
    "qiskit[visualization]>=2.3.0",
    "scipy>=1.17.0",
    "sympy>=1.14.0",
]
